# Building-Data-Driven-Applications-with-LlamaIndex

./: pyproject.toml
1 - ch2/: intro to llama-index.ipynb
2 - ch3/: 1. What is Document.ipynb  2. What is Node.ipynb  3. Extracting Nodes from Document.ipynb  4. Node Relationships.ipynb  5. Index.ipynb  6. First Augmented LLM Application.ipynb  7. ChatApp with GPT 4.ipynb  8. Example to create docs from Wikipedia.ipynb
PITS_APP/: README.ipynb
ch2/: sample1.ipynb
